# docpack

./: .gitignore  Cargo.toml  LICENSE  README.md  action.yml
.github/workflows/: release.yml  test.yml
docs/: design-principles.md  modeling-boundary.md
examples/: repo-config.yaml  workspace-child-config.yaml  workspace-config.yaml
examples/github-actions/: coverage-audit.yml  freshness-audit.yml  pr-lint-with-adoption-controls.yml  pr-lint.yml
examples/sample-workspace/: AGENTS.md  README.md
examples/sample-workspace/.ai-doc-lint/: config.yaml
examples/sample-workspace/.docpact/: config.yaml
examples/sample-workspace/docs/: branch-policy.md
examples/sample-workspace/sample-sdk/: AGENTS.md  README.md
skills/: README.md
skills/ci-integration/: SKILL.md
skills/ci-integration/agents/: openai.yaml
skills/ci-integration/assets/: integration-review-template.md  workflow-snippet-library.md
skills/coverage-backfill/: SKILL.md
skills/docpact/: SKILL.md
skills/docpact-governance/: SKILL.md
skills/documentation-maintenance/: SKILL.md
skills/failure-repair/: SKILL.md
skills/repository-onboarding/: SKILL.md
skills/routing-configuration/: SKILL.md
skills/rule-audit/: SKILL.md
skills/rule-authoring/: SKILL.md
src/: baseline.rs  check.rs  cli.rs  coverage.rs  diagnostics.rs  doctor.rs  explain.rs  freshness.rs  lib.rs  list_rules.rs  main.rs  render.rs  review.rs  route.rs  validate_config.rs  waiver.rs
src/config/: mod.rs
src/git/: mod.rs
src/metadata/: mod.rs
src/reporters/: mod.rs
src/rules/: mod.rs
(+77 files in other folders)
